--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <td>
                         <button type='button' class='btn btn-info'>Info</button>
                         <button type='button' class='btn btn-warning'>Edit</button>
-                        <button type='button' class='btn btn-danger'>Delete</button>
+                        <button type='button' class='btn btn-danger' onclick="$controller->deleteTask($value['id']);">Delete</button>
                     </td>
                     ".
                     "</tr>"
