--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <style>
         .nav-links {
             color: white;
@@ -37,7 +39,7 @@
             <hr class="my-4">
 
             <p class="lead">
-                <a href="/src/App/Views/CreateTaskView.php" class="btn btn-success">Create Task!</a>
+                <a href="/src/App/Views/CreateTaskView.htm" class="btn btn-success">Create Task!</a>
             </p>
         </div>
     </div>
@@ -69,7 +71,7 @@
                     <td>
                         <button type='button' class='btn btn-info'>Info</button>
                         <button type='button' class='btn btn-warning'>Edit</button>
-                        <button type='button' class='btn btn-danger' onclick="$controller->deleteTask($value['id']);">Delete</button>
+                        <button type='button' class='btn btn-danger'>Delete</button>
                     </td>
                     ".
                     "</tr>"
