--- a/index.htm
+++ b/index.htm
@@ -17,9 +17,24 @@
             margin-right: 20px;
         }
     </style>
+    <script>
+        $(function loadTasks() {
+            $.ajax({
+                type: 'POST',
+                url: './src/App/Controllers/TaskController.php',
+                data: {
+                    action: 'get',
+                    body: {}
+                },
+                success: function (result) {
+                    alert(JSON.stringify(result));
+                }
+            });
+        });
+    </script>
 </head>
 
-<body>
+<body onload="loadTasks();">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Task Manager</a>
@@ -44,7 +59,7 @@
         </div>
     </div>
     <div class="container">
-        <table class="table table-striped">
+        <table id="tasks" class="table table-striped">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">id</th>
