--- a/index.htm
+++ b/index.htm
@@ -18,19 +18,39 @@
         }
     </style>
     <script>
-        $(function loadTasks() {
+        function handleBtn(btn){
+            console.log(btn);
+        }
+        function insertRow(object) {
+            var tableRef = document.getElementById('tasks');
+            var newRow = tableRef.insertRow(1);
+            var index = 0;
+            for (i in object) {
+                var newCell = newRow.insertCell(index);
+                var newText = document.createTextNode(object[i]);
+                newCell.appendChild(newText);
+                index++;
+            }
+            var options = newRow.insertCell(-1);
+            options.innerHTML = '<button onclick="handleBtn(this)" type="button" class="btn btn-info">Info</button>';
+            options.innerHTML += '<button onclick="handleBtn(this)" type="button" class="btn btn-warning">Edit</button>';
+            options.innerHTML += '<button onclick="handleBtn(this)" type="button" class="btn btn-danger">Delete</button>';
+        }
+        function loadTasks() {
             $.ajax({
                 type: 'POST',
                 url: './src/App/Controllers/TaskController.php',
                 data: {
-                    action: 'getById',
-                    id: '9'
+                    action: 'get'
                 },
                 success: function (result) {
-                    alert(result);
+                    result = JSON.parse(result);
+                    for (task in result.data) {
+                        insertRow(result.data[task]);
+                    }
                 }
             });
-        });
+        }
     </script>
 </head>
 
@@ -72,27 +92,6 @@
                 </tr>
             </thead>
             <tbody>
-                <?php
-                foreach ($result as $value) {
-                    echo (
-                    "<tr>".
-                        "<th scope='row'>".$value['id']."</th>".
-                        "<td>".$value['name']."</td>".
-                        "<td>".$value['description']."</td>".
-                        "<td>".$value['deadline']."</td>".
-                        "<td>".$value['priority']."</td>".
-                        "<td>".$value['status']."</td>".
-                    "
-                    <td>
-                        <button type='button' class='btn btn-info'>Info</button>
-                        <button type='button' class='btn btn-warning'>Edit</button>
-                        <button type='button' class='btn btn-danger'>Delete</button>
-                    </td>
-                    ".
-                    "</tr>"
-                    );
-                }
-                ?>
             </tbody>
         </table>
     </div>
